# visordemo

./: README.md  pyproject.toml
tests/: test_visordemo.py
visordemo/: NEXT.md  __init__.py  camera.py  cli.py  protocol.py  server.py  simulator.py
visordemo/static/: index.html
