[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visordemo"
version = "0.1.0"
description = "Grab images from SensoPart VISOR vision sensors over TCP (library + CLI + web UI), pure stdlib"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yaze Lin", email = "yazelin@ching-tech.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/yazelin/visordemo"

[project.scripts]
visordemo = "visordemo.cli:main"

[tool.setuptools]
packages = ["visordemo"]

[tool.setuptools.package-data]
visordemo = ["static/*.html"]
